Fix jumping and other tweaks

--- a/src/styles.css
+++ b/src/styles.css
@@ -18,7 +18,7 @@ canvas {
 
 .wrapper {
     border: 2px solid black;
-    width: 100%;
+    width: 95%;
     padding: 6px;
 }
 
@@ -94,7 +94,6 @@ label {
     top: 125px;
     left: 50px;
     width: 350px;
-    overflow-y: scroll;
 }
 
 .builder--tile-selector {
